// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-accordion-group/secondary-content default 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="1-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="1"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="2-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="2"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="3-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="3"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/secondary-content m-link 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--has-secondary-content m--is-toggle-link-left"
  >
    <div
      class="m-accordion-group__header-title"
    >
      <h2>
        An Accordion Group Title
      </h2>
    </div>
     
    <div
      class="m-accordion-group__secondary-content"
    >
      <a
        class="m-link m--is-unvisited m--is-button m--has-left-icon m--has-content"
        href="#"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-link__icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-link__text"
        >
          Add content
        </span>
         
        <!---->
      </a>
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
      
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/secondary-content no-title 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--no-title m--has-secondary-content"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
      <h3>
        An Accordion Group Title
      </h3>
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/secondary-content no-title-toggle-link-left 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--no-title m--has-secondary-content m--is-toggle-link-left"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
      <h3>
        An Accordion Group Title
      </h3>
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/secondary-content toggle-link-left 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--has-secondary-content"
  >
    <div
      class="m-accordion-group__header-title"
    >
      <h2>
        An Accordion Group Title
      </h2>
    </div>
     
    <div
      class="m-accordion-group__secondary-content"
    >
      <h3>
        An Accordion Group Title
      </h3>
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
      
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="false"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;
